Add extensive list of bugs and vulnerabilities for Sentry testing

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,15 @@
         <main id="main-content">
             <!-- Content loaded dynamically -->
         </main>
+        
+        <!-- Added for bugs -->
+        <div id="comments-container"></div>
+        <div id="spinner" style="display:none;">Loading...</div>
+        <div id="log-container"></div>
+        <button id="refresh-btn">Refresh Admin</button>
     </div>
 
     <script src="app.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
